parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Prog
Rule 1     Prog -> GlobalBlc MainBlc DefBlcs
Rule 2     DefBlcs -> DefBlcs DefBlc
Rule 3     DefBlcs -> <empty>
Rule 4     DefBlc -> id { VarBlcs Insts }
Rule 5     VarBlcs -> VarBlcs BlcInt
Rule 6     VarBlcs -> <empty>
Rule 7     GlobalBlc -> GlobalBegin VarBlcs }
Rule 8     GlobalBegin -> global {
Rule 9     GlobalBlc -> <empty>
Rule 10    Dcls -> Dcls Dcl
Rule 11    Dcls -> <empty>
Rule 12    MainBlc -> main { VarBlcs Insts }
Rule 13    Insts -> Insts Inst
Rule 14    Insts -> <empty>
Rule 15    Inst -> Attr
Rule 16    Inst -> Return
Rule 17    Inst -> Exp
Rule 18    Inst -> Print
Rule 19    Inst -> Println
Rule 20    Inst -> Prints
Rule 21    Inst -> Repeat
Rule 22    Inst -> For
Rule 23    Inst -> While
Rule 24    Inst -> Read
Rule 25    Inst -> If
Rule 26    Repeat -> RepeatS ( num ) { Insts }
Rule 27    RepeatS -> repeat
Rule 28    For -> for ( Insts ; Cond ; Insts ) { Insts }
Rule 29    While -> while ( Cond ) { Insts }
Rule 30    Read -> read ( id )
Rule 31    Print -> print ( Exp )
Rule 32    Println -> println ( Exp )
Rule 33    Prints -> prints ( string )
Rule 34    BlcInt -> int { Dcls }
Rule 35    Dcl -> id [ num ]
Rule 36    Dcl -> id [ num ] = num
Rule 37    Dcl -> id [ ] = { Nums }
Rule 38    Nums -> Nums num
Rule 39    Nums -> <empty>
Rule 40    Dcl -> id [ num ] [ num ] = num
Rule 41    Dcl -> id [ num ] [ num ]
Rule 42    Dcl -> id [ ] [ ] = { BlcsNums }
Rule 43    BlcsNums -> BlcsNums { Nums }
Rule 44    BlcsNums -> <empty>
Rule 45    Dcl -> id
Rule 46    Dcl -> id = num
Rule 47    Attr -> id = Exp
Rule 48    Attr -> id [ Exp ] = Exp
Rule 49    Attr -> id [ Exp ] [ Exp ] = Exp
Rule 50    Attr -> gid = Exp
Rule 51    Attr -> gid [ Exp ] = Exp
Rule 52    Attr -> gid [ Exp ] [ Exp ] = Exp
Rule 53    Return -> return ( Exp )
Rule 54    If -> if ( Cond ) { Insts }
Rule 55    If -> if ( Cond ) Inst
Rule 56    If -> if ( Cond ) { Insts } else { Insts }
Rule 57    Exp -> Exp + Term
Rule 58    Exp -> Exp - Term
Rule 59    Exp -> id addeq Term
Rule 60    Exp -> id subeq Term
Rule 61    Exp -> id addeql Term
Rule 62    Exp -> id subeql Term
Rule 63    Exp -> gid addeq Term
Rule 64    Exp -> gid subeq Term
Rule 65    Exp -> gid addeql Term
Rule 66    Exp -> gid subeql Term
Rule 67    Exp -> Term
Rule 68    Term -> Term * Factor
Rule 69    Term -> Term / Factor
Rule 70    Term -> Term % Factor
Rule 71    Term -> id muleq Factor
Rule 72    Term -> id diveq Factor
Rule 73    Term -> id modeq Factor
Rule 74    Term -> id muleql Factor
Rule 75    Term -> id diveql Factor
Rule 76    Term -> id modeql Factor
Rule 77    Term -> gid muleq Factor
Rule 78    Term -> gid diveq Factor
Rule 79    Term -> gid modeq Factor
Rule 80    Term -> gid muleql Factor
Rule 81    Term -> gid diveql Factor
Rule 82    Term -> gid modeql Factor
Rule 83    Term -> Factor
Rule 84    Factor -> id plus
Rule 85    Factor -> id plusl
Rule 86    Factor -> id minus
Rule 87    Factor -> id minusl
Rule 88    Factor -> gid plus
Rule 89    Factor -> gid plusl
Rule 90    Factor -> gid minus
Rule 91    Factor -> gid minusl
Rule 92    Factor -> id
Rule 93    Factor -> gid
Rule 94    Factor -> num
Rule 95    Factor -> id ( )
Rule 96    Factor -> ( Cond )
Rule 97    Factor -> id [ Exp ]
Rule 98    Factor -> id [ Exp ] [ Exp ]
Rule 99    Factor -> gid [ Exp ]
Rule 100   Factor -> gid [ Exp ] [ Exp ]
Rule 101   Factor -> ( Exp )
Rule 102   Cond -> Cond and Cond
Rule 103   Cond -> Cond or Cond
Rule 104   Cond -> ( Cond and Cond )
Rule 105   Cond -> ( Cond or Cond )
Rule 106   Cond -> Exp sup Exp
Rule 107   Cond -> Exp inf Exp
Rule 108   Cond -> Exp supeq Exp
Rule 109   Cond -> Exp infeq Exp
Rule 110   Cond -> not Exp
Rule 111   Cond -> Exp eq Exp
Rule 112   Cond -> Exp diff Exp

Terminals, with rules where they appear

%                    : 70
(                    : 26 28 29 30 31 32 33 53 54 55 56 95 96 101 104 105
)                    : 26 28 29 30 31 32 33 53 54 55 56 95 96 101 104 105
*                    : 68
+                    : 57
-                    : 58
/                    : 69
;                    : 28 28
=                    : 36 37 40 42 46 47 48 49 50 51 52
[                    : 35 36 37 40 40 41 41 42 42 48 49 49 51 52 52 97 98 98 99 100 100
]                    : 35 36 37 40 40 41 41 42 42 48 49 49 51 52 52 97 98 98 99 100 100
addeq                : 59 63
addeql               : 61 65
and                  : 102 104
diff                 : 112
diveq                : 72 78
diveql               : 75 81
else                 : 56
eq                   : 111
error                : 
for                  : 28
gid                  : 50 51 52 63 64 65 66 77 78 79 80 81 82 88 89 90 91 93 99 100
global               : 8
id                   : 4 30 35 36 37 40 41 42 45 46 47 48 49 59 60 61 62 71 72 73 74 75 76 84 85 86 87 92 95 97 98
if                   : 54 55 56
inf                  : 107
infeq                : 109
int                  : 34
main                 : 12
minus                : 86 90
minusl               : 87 91
modeq                : 73 79
modeql               : 76 82
muleq                : 71 77
muleql               : 74 80
not                  : 110
num                  : 26 35 36 36 38 40 40 40 41 41 46 94
or                   : 103 105
plus                 : 84 88
plusl                : 85 89
print                : 31
println              : 32
prints               : 33
read                 : 30
repeat               : 27
return               : 53
string               : 33
subeq                : 60 64
subeql               : 62 66
sup                  : 106
supeq                : 108
while                : 29
{                    : 4 8 12 26 28 29 34 37 42 43 54 56 56
}                    : 4 7 12 26 28 29 34 37 42 43 54 56 56

Nonterminals, with rules where they appear

Attr                 : 15
BlcInt               : 5
BlcsNums             : 42 43
Cond                 : 28 29 54 55 56 96 102 102 103 103 104 104 105 105
Dcl                  : 10
Dcls                 : 10 34
DefBlc               : 2
DefBlcs              : 1 2
Exp                  : 17 31 32 47 48 48 49 49 49 50 51 51 52 52 52 53 57 58 97 98 98 99 100 100 101 106 106 107 107 108 108 109 109 110 111 111 112 112
Factor               : 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
For                  : 22
GlobalBegin          : 7
GlobalBlc            : 1
If                   : 25
Inst                 : 13 55
Insts                : 4 12 13 26 28 28 28 29 54 56 56
MainBlc              : 1
Nums                 : 37 38 43
Print                : 18
Println              : 19
Prints               : 20
Prog                 : 0
Read                 : 24
Repeat               : 21
RepeatS              : 26
Return               : 16
Term                 : 57 58 59 60 61 62 63 64 65 66 67 68 69 70
VarBlcs              : 4 5 7 12
While                : 23

Parsing method: LALR

state 0

    (0) S' -> . Prog
    (1) Prog -> . GlobalBlc MainBlc DefBlcs
    (7) GlobalBlc -> . GlobalBegin VarBlcs }
    (9) GlobalBlc -> .
    (8) GlobalBegin -> . global {

    main            reduce using rule 9 (GlobalBlc -> .)
    global          shift and go to state 4

    Prog                           shift and go to state 1
    GlobalBlc                      shift and go to state 2
    GlobalBegin                    shift and go to state 3

state 1

    (0) S' -> Prog .



state 2

    (1) Prog -> GlobalBlc . MainBlc DefBlcs
    (12) MainBlc -> . main { VarBlcs Insts }

    main            shift and go to state 6

    MainBlc                        shift and go to state 5

state 3

    (7) GlobalBlc -> GlobalBegin . VarBlcs }
    (5) VarBlcs -> . VarBlcs BlcInt
    (6) VarBlcs -> .

    }               reduce using rule 6 (VarBlcs -> .)
    int             reduce using rule 6 (VarBlcs -> .)

    VarBlcs                        shift and go to state 7

state 4

    (8) GlobalBegin -> global . {

    {               shift and go to state 8


state 5

    (1) Prog -> GlobalBlc MainBlc . DefBlcs
    (2) DefBlcs -> . DefBlcs DefBlc
    (3) DefBlcs -> .

    id              reduce using rule 3 (DefBlcs -> .)
    $end            reduce using rule 3 (DefBlcs -> .)

    DefBlcs                        shift and go to state 9

state 6

    (12) MainBlc -> main . { VarBlcs Insts }

    {               shift and go to state 10


state 7

    (7) GlobalBlc -> GlobalBegin VarBlcs . }
    (5) VarBlcs -> VarBlcs . BlcInt
    (34) BlcInt -> . int { Dcls }

    }               shift and go to state 11
    int             shift and go to state 13

    BlcInt                         shift and go to state 12

state 8

    (8) GlobalBegin -> global { .

    }               reduce using rule 8 (GlobalBegin -> global { .)
    int             reduce using rule 8 (GlobalBegin -> global { .)


state 9

    (1) Prog -> GlobalBlc MainBlc DefBlcs .
    (2) DefBlcs -> DefBlcs . DefBlc
    (4) DefBlc -> . id { VarBlcs Insts }

    $end            reduce using rule 1 (Prog -> GlobalBlc MainBlc DefBlcs .)
    id              shift and go to state 15

    DefBlc                         shift and go to state 14

state 10

    (12) MainBlc -> main { . VarBlcs Insts }
    (5) VarBlcs -> . VarBlcs BlcInt
    (6) VarBlcs -> .

    int             reduce using rule 6 (VarBlcs -> .)
    }               reduce using rule 6 (VarBlcs -> .)
    id              reduce using rule 6 (VarBlcs -> .)
    gid             reduce using rule 6 (VarBlcs -> .)
    return          reduce using rule 6 (VarBlcs -> .)
    print           reduce using rule 6 (VarBlcs -> .)
    println         reduce using rule 6 (VarBlcs -> .)
    prints          reduce using rule 6 (VarBlcs -> .)
    for             reduce using rule 6 (VarBlcs -> .)
    while           reduce using rule 6 (VarBlcs -> .)
    read            reduce using rule 6 (VarBlcs -> .)
    if              reduce using rule 6 (VarBlcs -> .)
    repeat          reduce using rule 6 (VarBlcs -> .)
    num             reduce using rule 6 (VarBlcs -> .)
    (               reduce using rule 6 (VarBlcs -> .)

    VarBlcs                        shift and go to state 16

state 11

    (7) GlobalBlc -> GlobalBegin VarBlcs } .

    main            reduce using rule 7 (GlobalBlc -> GlobalBegin VarBlcs } .)


state 12

    (5) VarBlcs -> VarBlcs BlcInt .

    }               reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    int             reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    id              reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    gid             reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    return          reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    print           reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    println         reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    prints          reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    for             reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    while           reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    read            reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    if              reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    repeat          reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    num             reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)
    (               reduce using rule 5 (VarBlcs -> VarBlcs BlcInt .)


state 13

    (34) BlcInt -> int . { Dcls }

    {               shift and go to state 17


state 14

    (2) DefBlcs -> DefBlcs DefBlc .

    id              reduce using rule 2 (DefBlcs -> DefBlcs DefBlc .)
    $end            reduce using rule 2 (DefBlcs -> DefBlcs DefBlc .)


state 15

    (4) DefBlc -> id . { VarBlcs Insts }

    {               shift and go to state 18


state 16

    (12) MainBlc -> main { VarBlcs . Insts }
    (5) VarBlcs -> VarBlcs . BlcInt
    (13) Insts -> . Insts Inst
    (14) Insts -> .
    (34) BlcInt -> . int { Dcls }

    }               reduce using rule 14 (Insts -> .)
    id              reduce using rule 14 (Insts -> .)
    gid             reduce using rule 14 (Insts -> .)
    return          reduce using rule 14 (Insts -> .)
    print           reduce using rule 14 (Insts -> .)
    println         reduce using rule 14 (Insts -> .)
    prints          reduce using rule 14 (Insts -> .)
    for             reduce using rule 14 (Insts -> .)
    while           reduce using rule 14 (Insts -> .)
    read            reduce using rule 14 (Insts -> .)
    if              reduce using rule 14 (Insts -> .)
    repeat          reduce using rule 14 (Insts -> .)
    num             reduce using rule 14 (Insts -> .)
    (               reduce using rule 14 (Insts -> .)
    int             shift and go to state 13

    Insts                          shift and go to state 19
    BlcInt                         shift and go to state 12

state 17

    (34) BlcInt -> int { . Dcls }
    (10) Dcls -> . Dcls Dcl
    (11) Dcls -> .

    }               reduce using rule 11 (Dcls -> .)
    id              reduce using rule 11 (Dcls -> .)

    Dcls                           shift and go to state 20

state 18

    (4) DefBlc -> id { . VarBlcs Insts }
    (5) VarBlcs -> . VarBlcs BlcInt
    (6) VarBlcs -> .

    int             reduce using rule 6 (VarBlcs -> .)
    }               reduce using rule 6 (VarBlcs -> .)
    id              reduce using rule 6 (VarBlcs -> .)
    gid             reduce using rule 6 (VarBlcs -> .)
    return          reduce using rule 6 (VarBlcs -> .)
    print           reduce using rule 6 (VarBlcs -> .)
    println         reduce using rule 6 (VarBlcs -> .)
    prints          reduce using rule 6 (VarBlcs -> .)
    for             reduce using rule 6 (VarBlcs -> .)
    while           reduce using rule 6 (VarBlcs -> .)
    read            reduce using rule 6 (VarBlcs -> .)
    if              reduce using rule 6 (VarBlcs -> .)
    repeat          reduce using rule 6 (VarBlcs -> .)
    num             reduce using rule 6 (VarBlcs -> .)
    (               reduce using rule 6 (VarBlcs -> .)

    VarBlcs                        shift and go to state 21

state 19

    (12) MainBlc -> main { VarBlcs Insts . }
    (13) Insts -> Insts . Inst
    (15) Inst -> . Attr
    (16) Inst -> . Return
    (17) Inst -> . Exp
    (18) Inst -> . Print
    (19) Inst -> . Println
    (20) Inst -> . Prints
    (21) Inst -> . Repeat
    (22) Inst -> . For
    (23) Inst -> . While
    (24) Inst -> . Read
    (25) Inst -> . If
    (47) Attr -> . id = Exp
    (48) Attr -> . id [ Exp ] = Exp
    (49) Attr -> . id [ Exp ] [ Exp ] = Exp
    (50) Attr -> . gid = Exp
    (51) Attr -> . gid [ Exp ] = Exp
    (52) Attr -> . gid [ Exp ] [ Exp ] = Exp
    (53) Return -> . return ( Exp )
    (57) Exp -> . Exp + Term
    (58) Exp -> . Exp - Term
    (59) Exp -> . id addeq Term
    (60) Exp -> . id subeq Term
    (61) Exp -> . id addeql Term
    (62) Exp -> . id subeql Term
    (63) Exp -> . gid addeq Term
    (64) Exp -> . gid subeq Term
    (65) Exp -> . gid addeql Term
    (66) Exp -> . gid subeql Term
    (67) Exp -> . Term
    (31) Print -> . print ( Exp )
    (32) Println -> . println ( Exp )
    (33) Prints -> . prints ( string )
    (26) Repeat -> . RepeatS ( num ) { Insts }
    (28) For -> . for ( Insts ; Cond ; Insts ) { Insts }
    (29) While -> . while ( Cond ) { Insts }
    (30) Read -> . read ( id )
    (54) If -> . if ( Cond ) { Insts }
    (55) If -> . if ( Cond ) Inst
    (56) If -> . if ( Cond ) { Insts } else { Insts }
    (68) Term -> . Term * Factor
    (69) Term -> . Term / Factor
    (70) Term -> . Term % Factor
    (71) Term -> . id muleq Factor
    (72) Term -> . id diveq Factor
    (73) Term -> . id modeq Factor
    (74) Term -> . id muleql Factor
    (75) Term -> . id diveql Factor
    (76) Term -> . id modeql Factor
    (77) Term -> . gid muleq Factor
    (78) Term -> . gid diveq Factor
    (79) Term -> . gid modeq Factor
    (80) Term -> . gid muleql Factor
    (81) Term -> . gid diveql Factor
    (82) Term -> . gid modeql Factor
    (83) Term -> . Factor
    (27) RepeatS -> . repeat
    (84) Factor -> . id plus
    (85) Factor -> . id plusl
    (86) Factor -> . id minus
    (87) Factor -> . id minusl
    (88) Factor -> . gid plus
    (89) Factor -> . gid plusl
    (90) Factor -> . gid minus
    (91) Factor -> . gid minusl
    (92) Factor -> . id
    (93) Factor -> . gid
    (94) Factor -> . num
    (95) Factor -> . id ( )
    (96) Factor -> . ( Cond )
    (97) Factor -> . id [ Exp ]
    (98) Factor -> . id [ Exp ] [ Exp ]
    (99) Factor -> . gid [ Exp ]
    (100) Factor -> . gid [ Exp ] [ Exp ]
    (101) Factor -> . ( Exp )

    }               shift and go to state 22
    id              shift and go to state 35
    gid             shift and go to state 36
    return          shift and go to state 37
    print           shift and go to state 40
    println         shift and go to state 41
    prints          shift and go to state 42
    for             shift and go to state 45
    while           shift and go to state 46
    read            shift and go to state 47
    if              shift and go to state 48
    repeat          shift and go to state 50
    num             shift and go to state 44
    (               shift and go to state 38

    Inst                           shift and go to state 23
    Attr                           shift and go to state 24
    Return                         shift and go to state 25
    Exp                            shift and go to state 26
    Print                          shift and go to state 27
    Println                        shift and go to state 28
    Prints                         shift and go to state 29
    Repeat                         shift and go to state 30
    For                            shift and go to state 31
    While                          shift and go to state 32
    Read                           shift and go to state 33
    If                             shift and go to state 34
    Term                           shift and go to state 39
    RepeatS                        shift and go to state 43
    Factor                         shift and go to state 49

state 20

    (34) BlcInt -> int { Dcls . }
    (10) Dcls -> Dcls . Dcl
    (35) Dcl -> . id [ num ]
    (36) Dcl -> . id [ num ] = num
    (37) Dcl -> . id [ ] = { Nums }
    (40) Dcl -> . id [ num ] [ num ] = num
    (41) Dcl -> . id [ num ] [ num ]
    (42) Dcl -> . id [ ] [ ] = { BlcsNums }
    (45) Dcl -> . id
    (46) Dcl -> . id = num

    }               shift and go to state 51
    id              shift and go to state 53

    Dcl                            shift and go to state 52

state 21

    (4) DefBlc -> id { VarBlcs . Insts }
    (5) VarBlcs -> VarBlcs . BlcInt
    (13) Insts -> . Insts Inst
    (14) Insts -> .
    (34) BlcInt -> . int { Dcls }

    }               reduce using rule 14 (Insts -> .)
    id              reduce using rule 14 (Insts -> .)
    gid             reduce using rule 14 (Insts -> .)
    return          reduce using rule 14 (Insts -> .)
    print           reduce using rule 14 (Insts -> .)
    println         reduce using rule 14 (Insts -> .)
    prints          reduce using rule 14 (Insts -> .)
    for             reduce using rule 14 (Insts -> .)
    while           reduce using rule 14 (Insts -> .)
    read            reduce using rule 14 (Insts -> .)
    if              reduce using rule 14 (Insts -> .)
    repeat          reduce using rule 14 (Insts -> .)
    num             reduce using rule 14 (Insts -> .)
    (               reduce using rule 14 (Insts -> .)
    int             shift and go to state 13

    Insts                          shift and go to state 54
    BlcInt                         shift and go to state 12

state 22

    (12) MainBlc -> main { VarBlcs Insts } .

    id              reduce using rule 12 (MainBlc -> main { VarBlcs Insts } .)
    $end            reduce using rule 12 (MainBlc -> main { VarBlcs Insts } .)


state 23

    (13) Insts -> Insts Inst .

    }               reduce using rule 13 (Insts -> Insts Inst .)
    id              reduce using rule 13 (Insts -> Insts Inst .)
    gid             reduce using rule 13 (Insts -> Insts Inst .)
    return          reduce using rule 13 (Insts -> Insts Inst .)
    print           reduce using rule 13 (Insts -> Insts Inst .)
    println         reduce using rule 13 (Insts -> Insts Inst .)
    prints          reduce using rule 13 (Insts -> Insts Inst .)
    for             reduce using rule 13 (Insts -> Insts Inst .)
    while           reduce using rule 13 (Insts -> Insts Inst .)
    read            reduce using rule 13 (Insts -> Insts Inst .)
    if              reduce using rule 13 (Insts -> Insts Inst .)
    repeat          reduce using rule 13 (Insts -> Insts Inst .)
    num             reduce using rule 13 (Insts -> Insts Inst .)
    (               reduce using rule 13 (Insts -> Insts Inst .)
    ;               reduce using rule 13 (Insts -> Insts Inst .)
    )               reduce using rule 13 (Insts -> Insts Inst .)


state 24

    (15) Inst -> Attr .

    }               reduce using rule 15 (Inst -> Attr .)
    id              reduce using rule 15 (Inst -> Attr .)
    gid             reduce using rule 15 (Inst -> Attr .)
    return          reduce using rule 15 (Inst -> Attr .)
    print           reduce using rule 15 (Inst -> Attr .)
    println         reduce using rule 15 (Inst -> Attr .)
    prints          reduce using rule 15 (Inst -> Attr .)
    for             reduce using rule 15 (Inst -> Attr .)
    while           reduce using rule 15 (Inst -> Attr .)
    read            reduce using rule 15 (Inst -> Attr .)
    if              reduce using rule 15 (Inst -> Attr .)
    repeat          reduce using rule 15 (Inst -> Attr .)
    num             reduce using rule 15 (Inst -> Attr .)
    (               reduce using rule 15 (Inst -> Attr .)
    ;               reduce using rule 15 (Inst -> Attr .)
    )               reduce using rule 15 (Inst -> Attr .)


state 25

    (16) Inst -> Return .

    }               reduce using rule 16 (Inst -> Return .)
    id              reduce using rule 16 (Inst -> Return .)
    gid             reduce using rule 16 (Inst -> Return .)
    return          reduce using rule 16 (Inst -> Return .)
    print           reduce using rule 16 (Inst -> Return .)
    println         reduce using rule 16 (Inst -> Return .)
    prints          reduce using rule 16 (Inst -> Return .)
    for             reduce using rule 16 (Inst -> Return .)
    while           reduce using rule 16 (Inst -> Return .)
    read            reduce using rule 16 (Inst -> Return .)
    if              reduce using rule 16 (Inst -> Return .)
    repeat          reduce using rule 16 (Inst -> Return .)
    num             reduce using rule 16 (Inst -> Return .)
    (               reduce using rule 16 (Inst -> Return .)
    ;               reduce using rule 16 (Inst -> Return .)
    )               reduce using rule 16 (Inst -> Return .)


state 26

    (17) Inst -> Exp .
    (57) Exp -> Exp . + Term
    (58) Exp -> Exp . - Term

    }               reduce using rule 17 (Inst -> Exp .)
    id              reduce using rule 17 (Inst -> Exp .)
    gid             reduce using rule 17 (Inst -> Exp .)
    return          reduce using rule 17 (Inst -> Exp .)
    print           reduce using rule 17 (Inst -> Exp .)
    println         reduce using rule 17 (Inst -> Exp .)
    prints          reduce using rule 17 (Inst -> Exp .)
    for             reduce using rule 17 (Inst -> Exp .)
    while           reduce using rule 17 (Inst -> Exp .)
    read            reduce using rule 17 (Inst -> Exp .)
    if              reduce using rule 17 (Inst -> Exp .)
    repeat          reduce using rule 17 (Inst -> Exp .)
    num             reduce using rule 17 (Inst -> Exp .)
    (               reduce using rule 17 (Inst -> Exp .)
    ;               reduce using rule 17 (Inst -> Exp .)
    )               reduce using rule 17 (Inst -> Exp .)
    +               shift and go to state 55
    -               shift and go to state 56


state 27

    (18) Inst -> Print .

    }               reduce using rule 18 (Inst -> Print .)
    id              reduce using rule 18 (Inst -> Print .)
    gid             reduce using rule 18 (Inst -> Print .)
    return          reduce using rule 18 (Inst -> Print .)
    print           reduce using rule 18 (Inst -> Print .)
    println         reduce using rule 18 (Inst -> Print .)
    prints          reduce using rule 18 (Inst -> Print .)
    for             reduce using rule 18 (Inst -> Print .)
    while           reduce using rule 18 (Inst -> Print .)
    read            reduce using rule 18 (Inst -> Print .)
    if              reduce using rule 18 (Inst -> Print .)
    repeat          reduce using rule 18 (Inst -> Print .)
    num             reduce using rule 18 (Inst -> Print .)
    (               reduce using rule 18 (Inst -> Print .)
    ;               reduce using rule 18 (Inst -> Print .)
    )               reduce using rule 18 (Inst -> Print .)


state 28

    (19) Inst -> Println .

    }               reduce using rule 19 (Inst -> Println .)
    id              reduce using rule 19 (Inst -> Println .)
    gid             reduce using rule 19 (Inst -> Println .)
    return          reduce using rule 19 (Inst -> Println .)
    print           reduce using rule 19 (Inst -> Println .)
    println         reduce using rule 19 (Inst -> Println .)
    prints          reduce using rule 19 (Inst -> Println .)
    for             reduce using rule 19 (Inst -> Println .)
    while           reduce using rule 19 (Inst -> Println .)
    read            reduce using rule 19 (Inst -> Println .)
    if              reduce using rule 19 (Inst -> Println .)
    repeat          reduce using rule 19 (Inst -> Println .)
    num             reduce using rule 19 (Inst -> Println .)
    (               reduce using rule 19 (Inst -> Println .)
    ;               reduce using rule 19 (Inst -> Println .)
    )               reduce using rule 19 (Inst -> Println .)


state 29

    (20) Inst -> Prints .

    }               reduce using rule 20 (Inst -> Prints .)
    id              reduce using rule 20 (Inst -> Prints .)
    gid             reduce using rule 20 (Inst -> Prints .)
    return          reduce using rule 20 (Inst -> Prints .)
    print           reduce using rule 20 (Inst -> Prints .)
    println         reduce using rule 20 (Inst -> Prints .)
    prints          reduce using rule 20 (Inst -> Prints .)
    for             reduce using rule 20 (Inst -> Prints .)
    while           reduce using rule 20 (Inst -> Prints .)
    read            reduce using rule 20 (Inst -> Prints .)
    if              reduce using rule 20 (Inst -> Prints .)
    repeat          reduce using rule 20 (Inst -> Prints .)
    num             reduce using rule 20 (Inst -> Prints .)
    (               reduce using rule 20 (Inst -> Prints .)
    ;               reduce using rule 20 (Inst -> Prints .)
    )               reduce using rule 20 (Inst -> Prints .)


state 30

    (21) Inst -> Repeat .

    }               reduce using rule 21 (Inst -> Repeat .)
    id              reduce using rule 21 (Inst -> Repeat .)
    gid             reduce using rule 21 (Inst -> Repeat .)
    return          reduce using rule 21 (Inst -> Repeat .)
    print           reduce using rule 21 (Inst -> Repeat .)
    println         reduce using rule 21 (Inst -> Repeat .)
    prints          reduce using rule 21 (Inst -> Repeat .)
    for             reduce using rule 21 (Inst -> Repeat .)
    while           reduce using rule 21 (Inst -> Repeat .)
    read            reduce using rule 21 (Inst -> Repeat .)
    if              reduce using rule 21 (Inst -> Repeat .)
    repeat          reduce using rule 21 (Inst -> Repeat .)
    num             reduce using rule 21 (Inst -> Repeat .)
    (               reduce using rule 21 (Inst -> Repeat .)
    ;               reduce using rule 21 (Inst -> Repeat .)
    )               reduce using rule 21 (Inst -> Repeat .)


state 31

    (22) Inst -> For .

    }               reduce using rule 22 (Inst -> For .)
    id              reduce using rule 22 (Inst -> For .)
    gid             reduce using rule 22 (Inst -> For .)
    return          reduce using rule 22 (Inst -> For .)
    print           reduce using rule 22 (Inst -> For .)
    println         reduce using rule 22 (Inst -> For .)
    prints          reduce using rule 22 (Inst -> For .)
    for             reduce using rule 22 (Inst -> For .)
    while           reduce using rule 22 (Inst -> For .)
    read            reduce using rule 22 (Inst -> For .)
    if              reduce using rule 22 (Inst -> For .)
    repeat          reduce using rule 22 (Inst -> For .)
    num             reduce using rule 22 (Inst -> For .)
    (               reduce using rule 22 (Inst -> For .)
    ;               reduce using rule 22 (Inst -> For .)
    )               reduce using rule 22 (Inst -> For .)


state 32

    (23) Inst -> While .

    }               reduce using rule 23 (Inst -> While .)
    id              reduce using rule 23 (Inst -> While .)
    gid             reduce using rule 23 (Inst -> While .)
    return          reduce using rule 23 (Inst -> While .)
    print           reduce using rule 23 (Inst -> While .)
    println         reduce using rule 23 (Inst -> While .)
    prints          reduce using rule 23 (Inst -> While .)
    for             reduce using rule 23 (Inst -> While .)
    while           reduce using rule 23 (Inst -> While .)
    read            reduce using rule 23 (Inst -> While .)
    if              reduce using rule 23 (Inst -> While .)
    repeat          reduce using rule 23 (Inst -> While .)
    num             reduce using rule 23 (Inst -> While .)
    (               reduce using rule 23 (Inst -> While .)
    ;               reduce using rule 23 (Inst -> While .)
    )               reduce using rule 23 (Inst -> While .)


state 33

    (24) Inst -> Read .

    }               reduce using rule 24 (Inst -> Read .)
    id              reduce using rule 24 (Inst -> Read .)
    gid             reduce using rule 24 (Inst -> Read .)
    return          reduce using rule 24 (Inst -> Read .)
    print           reduce using rule 24 (Inst -> Read .)
    println         reduce using rule 24 (Inst -> Read .)
    prints          reduce using rule 24 (Inst -> Read .)
    for             reduce using rule 24 (Inst -> Read .)
    while           reduce using rule 24 (Inst -> Read .)
    read            reduce using rule 24 (Inst -> Read .)
    if              reduce using rule 24 (Inst -> Read .)
    repeat          reduce using rule 24 (Inst -> Read .)
    num             reduce using rule 24 (Inst -> Read .)
    (               reduce using rule 24 (Inst -> Read .)
    ;               reduce using rule 24 (Inst -> Read .)
    )               reduce using rule 24 (Inst -> Read .)


state 34

    (25) Inst -> If .

    }               reduce using rule 25 (Inst -> If .)
    id              reduce using rule 25 (Inst -> If .)
    gid             reduce using rule 25 (Inst -> If .)
    return          reduce using rule 25 (Inst -> If .)
    print           reduce using rule 25 (Inst -> If .)
    println         reduce using rule 25 (Inst -> If .)
    prints          reduce using rule 25 (Inst -> If .)
    for             reduce using rule 25 (Inst -> If .)
    while           reduce using rule 25 (Inst -> If .)
    read            reduce using rule 25 (Inst -> If .)
    if              reduce using rule 25 (Inst -> If .)
    repeat          reduce using rule 25 (Inst -> If .)
    num             reduce using rule 25 (Inst -> If .)
    (               reduce using rule 25 (Inst -> If .)
    ;               reduce using rule 25 (Inst -> If .)
    )               reduce using rule 25 (Inst -> If .)


state 35

    (47) Attr -> id . = Exp
    (48) Attr -> id . [ Exp ] = Exp
    (49) Attr -> id . [ Exp ] [ Exp ] = Exp
    (59) Exp -> id . addeq Term
    (60) Exp -> id . subeq Term
    (61) Exp -> id . addeql Term
    (62) Exp -> id . subeql Term
    (71) Term -> id . muleq Factor
    (72) Term -> id . diveq Factor
    (73) Term -> id . modeq Factor
    (74) Term -> id . muleql Factor
    (75) Term -> id . diveql Factor
    (76) Term -> id . modeql Factor
    (84) Factor -> id . plus
    (85) Factor -> id . plusl
    (86) Factor -> id . minus
    (87) Factor -> id . minusl
    (92) Factor -> id .
    (95) Factor -> id . ( )
    (97) Factor -> id . [ Exp ]
    (98) Factor -> id . [ Exp ] [ Exp ]
